--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,19 +4,17 @@
 	max-width: 1280px;
 	margin: 0 auto;
 	padding: 2rem;
-
-	font-weight: normal;
 }
 
 a,
 .green {
 	text-decoration: none;
-	color: hsla(160, 100%, 37%, 1);
+	color: rgb(192, 227, 217);
 	transition: 0.4s;
 }
 
 @media (hover: hover) {
 	a:hover {
-		background-color: hsla(160, 100%, 37%, 0.2);
+		background-color: rgb(54, 98, 89);
 	}
 }
