--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,6 @@
 /* color palette from <https://github.com/vuejs/theme> */
+/* vuejs/theme is licensed under the MIT License Copyright (c) 2021-present Evan You                    */
+
 :root {
 	--vt-c-black: #181818;
 	--vt-c-black-soft: #222222;
